fix: align left mnemonic words on backup flow (#33)

--- a/src/modals/backup-identity/steps/verify-mnemonic-words/mnemonic-grid/MnemonicGrid.css
+++ b/src/modals/backup-identity/steps/verify-mnemonic-words/mnemonic-grid/MnemonicGrid.css
@@ -1,13 +1,6 @@
 .mnemonicGrid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-
-    /* This pseudo-element is used to align the last row elements to the left */
-    &::after {
-        content: "";
-        flex: auto;
-    }
 
     & .badge {
         margin-bottom: 1.2rem;
